infra/04-applications/05-services/keycloak/vanilla/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  type: ClusterIP
  selector:
    app: keycloak
  ports:
    - port: 80
      targetPort: 8080
